 * fixed the missing 'elder-mage-halo7.png' in the Elder Mage
 * unit balancing:
     * Elvish Rider: increase melee to 6-4, increase ranged to 7-3
     * Elvish Outrider: increase melee to 8-4, increase ranged to 7-4
 * fixed some OoS errors when chatting while a fight is taking place
 * fixed the spurious "statistics verification failed" messages
 
Version 0.9.0:
 * user interface improvements:
   * added alternative theme: DFool
   * added theme dialog, launched with ":theme"	
   * made help use single click instead of double click
 * campaign modifications
   * tutorial polishing
   * updated 'The Siege of Elensefar', 'Mountain Pass', 'The Swamp of Esten', and 'A Final Spring' to use the new ford terrain (Heir to the Throne & The Rise of Wesnoth).
   * modified the behaviour of the thieves in 'The Siege of Elensefar' (Heir to the Throne)
   * updated Heir to the Throne and The Rise of Wesnoth to use the ruined keeps where appropriate
   * dialog improvements in Eastern Invasion
   * new map for Drowned Plains (Eastern Invasion)
   * changed the Wesfolk Leader's guards to poachers in 'The Fall' (The Rise of Wesnoth)
 * multiplayer improvements
   * rewrote multiplayer lobby code
   * changed Broken_Bridge to use new ruined castles
   * added new multiplayer maps: Icy Waters, Clash
   * changed King_of_the_Hill to use a Dwarvish Castle
   * chat messages are now displayed in the user's colour when prefixed with /me
   * split the map and scenario file for 'An Island'
   * disabled debug mode for multiplayer games
   * made it possible to join games using eras which only are on the host-side
   * made it possible for the server to redirect the clients to another host (client-side support only for now)
 * terrain improvements
   * improved transitions:
     * swamp
     * keep to keep
   * added new terrains:
     * ruined castle
     * sunken ruin
     * swamp-ruin
     * river ford
     * lava
 * unit graphics and sound improvements 