@@ -1,12 +1,12 @@
 [test]
-	name=Scenario 1: The Elves Besieged
+	name="Test scenario"
 	map_data="mmmmggggggggggggggggggggggggggggggggg
 mmmmggggggggggggggggggggggggggggggggg
 mgggggCCCCggggggggggggggggggggggggggg
 mgggggC1Cgggggggggfffffgggggggggggggg
 mgggggCCCgggggggggfffffgggccccggggggg
 mgggggCCCgggggggggfffffgggcchhggggggg
-mgggggggggggggggggggggggggccccggggggg
+mgggggtgtgggggggggggggggggccccggggggg
 ggggggggggggggggggggggggggggggggggggg
 ggggggggggggggggggggggggggggggggggggg
 ggggggggggggggggggggggggggggggggggggg
@@ -33,7 +33,6 @@ name=moveto
    [/filter]
 
    [message]
-   id=you_didnt_win
    speaker=narrator
    message= _ "You can come if you wish, but the leader is only interested in speaking to Baldras."
    [/message]
@@ -96,7 +95,7 @@ name=moveto
 	canrecruit=1
 	controller=human
 	hitpoints=80
-	recruit=Assassin,Elvish Hero,Elvish Fighter,Elvish Archer,Horseman,Mage,Elvish Shaman,Red Mage,Spearman,Swordsman,Duelist,Fencer,Elvish Captain,Elvish Ranger,Elvish Shyde,Thief,Rogue,Merman,Elvish Lord,White Mage,Mage of Light,Elvish Sharpshooter,Silver Mage
+	recruit="Assassin,Elvish Hero,Elvish Fighter,Elvish Archer,Horseman,Mage,Elvish Shaman,Red Mage,Spearman,Swordsman,Duelist,Fencer,Elvish Captain,Elvish Ranger,Elvish Shyde,Thief,Rogue,Merman,Elvish Lord,White Mage,Mage of Light,Elvish Sharpshooter,Silver Mage"
 	gold=2000
 	enemy=2
 	shroud=yes
@@ -104,51 +103,29 @@ name=moveto
 
 	[side]
 	type=Orcish Warlord
-	description=Urug-Telfar
+	description="Urug-Telfar"
 	side=2
 	controller=ai
 	canrecruit=1
-	recruit=Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Archer,Orcish Assassin,Saurian Skirmisher,Naga
+	recruit="Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Archer,Orcish Assassin,Saurian Skirmisher,Naga"
 	gold=40
 	income=10
 	enemy=1
 		[unit]
 			x,y=12,13
-			type=Orcish Archer
+			type="Orcish Archer"
 			generate_description=yes
 		[/unit]
 	[/side]
 
 	[item]
 	x,y=8,8
-	image=items/orcish-flag.png
+	image="items/orcish-flag.png"
 	[/item]
 	[label]
 	x,y=8,8
-	id=northerners_unleashed
 	text="Northerners unleashed!"
 	[/label]
-
-	[event]
-	name=prestart
-		[set_variable]
-			name=random1
-			random=1..100
-		[/set_variable]
-		[set_variable]
-			name=random2
-			random=1..100
-		[/set_variable]
-	[/event]
-
-	[event]
-	name=start
-
-		[message]
-			speaker=Konrad
-			message="Random numbers: $random1, $random2"
-		[/message]
-	[/event]
 
 	[event]
 	name=moveto
@@ -168,26 +145,25 @@ name=moveto
 		{VARIABLE_OP yy1 random 10..17}
 
 		[unit]
-			side=1
-			x,y=$xx1,$yy1
-			type=Orcish Warlord
-			description=Bozo
+			side=2
+			x,y="$xx1","$yy1"
+			type="Orcish Warlord"
+			description="Bozo"
 			generate_description=yes
 		[/unit]
 
 		[message]
-			speaker=Bozo
+			speaker="Bozo"
 			message="Mwahahahahah! I appeared at $xx1, $yy1!"
 		[/message]
 	[/event]
 
 	[item]
 	x,y=4,4
-	image=items/orcish-flag.png
+	image="items/orcish-flag.png"
 	[/item]
 	[label]
 	x,y=4,4
-	id=open_the_path
 	text="Open, Sesame!"
 	[/label]
 
@@ -208,7 +184,7 @@ name=moveto
 	
 	[item]
 	x,y=8,5
-	image=items/orcish-flag.png
+	image="items/orcish-flag.png"
 	[/item]
 	[label]
 	x,y=8,5
@@ -225,9 +201,52 @@ name=moveto
 		[/filter]
 		[remove_shroud]
 			side=1
-			x=0-38
-			y=0-20
+			x="0-38"
+			y="0-20"
 		[/remove_shroud]
+	[/event]
+
+	[item]
+	x,y=8,7
+	image="items/chest-plain-closed.png"
+	[/item]
+	[label]
+	x,y=8,7
+	text="BOOM!"
+	[/label]
+
+	[event]
+	name="moveto"
+	first_time_only=no
+		[filter]
+			x,y=8,7
+		[/filter]
+		[terrain]
+			x="7,9"
+			y="7,7"
+			letter="g"
+		[/terrain]
+	[/event]
+
+	[item]
+	x,y=9,3
+	image="items/gohere.png"
+	[/item]
+	[label]
+	x,y=9,3
+	text="Win"
+	[/label]
+
+	[event]
+	name="moveto"
+	first_time_only=no
+		[filter]
+			x,y=9,3
+		[/filter]
+		[endlevel]
+			result="victory"
+			bonus=yes
+		[/endlevel]
 	[/event]
 [/test]
 
